--- a/src/AnyStatus/Features/ToolWindow/ToolWindowControl.xaml
+++ b/src/AnyStatus/Features/ToolWindow/ToolWindowControl.xaml
@@ -88,16 +88,22 @@
                     </Rectangle>
                 </Grid>
 
+                <!-- TreeView item style (must be in this xaml) -->
+                <Style x:Key="TreeViewItemContainerStyle" TargetType="{x:Type TreeViewItem}" BasedOn="{StaticResource TreeViewItemStyle}">
+                    <Setter Property="Tag" Value="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type UserControl}}}"/>
+                    <EventSetter Event="TreeViewItem.MouseMove" Handler="TreeViewItem_MouseMove" />
+                    <EventSetter Event="TreeViewItem.DragOver" Handler="TreeViewItem_DragOver" />
+                    <EventSetter Event="TreeViewItem.Drop" Handler="TreeViewItem_Drop" />
+                </Style>
+                
                 <!--Folder-->
                 <HierarchicalDataTemplate DataType="{x:Type local:Folder}" ItemsSource="{Binding Items}">
-                    <StackPanel Style="{StaticResource StatusPanelStyle}"
-                                ContextMenu="{StaticResource FolderContextMenu}"
-                                Tag="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type UserControl}}}">
+                    <StackPanel Style="{StaticResource StatusPanelStyle}">
 
                         <StackPanel.ToolTip>
                             <TextBlock Text="{Binding Converter={StaticResource TooltipConverter}}" />
                         </StackPanel.ToolTip>
-                        
+
                         <ContentControl Content="{StaticResource ColoredStatusIndicator}"/>
 
                         <ContentControl Content="{StaticResource IconStatusIndicator}"/>
@@ -110,14 +116,17 @@
                                                  IsEditing="{Binding IsEditing}" 
                                                  SaveCommand="{Binding DataContext.SaveCommand, ElementName=ToolWindow}" />
                     </StackPanel>
+                    <HierarchicalDataTemplate.ItemContainerStyle>
+                        <Style TargetType="{x:Type TreeViewItem}" BasedOn="{StaticResource TreeViewItemContainerStyle}">
+                            <Setter Property="ContextMenu" Value="{StaticResource FolderContextMenu}" />
+                        </Style>
+                    </HierarchicalDataTemplate.ItemContainerStyle>
                 </HierarchicalDataTemplate>
 
                 <!--Item-->
                 <DataTemplate DataType="{x:Type local:Item}">
 
-                    <StackPanel Style="{StaticResource StatusPanelStyle}"
-                                ContextMenu="{StaticResource ItemContextMenu}"
-                                Tag="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type UserControl}}}">
+                    <StackPanel Style="{StaticResource StatusPanelStyle}">
 
                         <StackPanel.ToolTip>
                             <TextBlock Text="{Binding Converter={StaticResource TooltipConverter}}" />
@@ -145,9 +154,7 @@
 
             <TreeView.ItemContainerStyle>
                 <Style TargetType="{x:Type TreeViewItem}" BasedOn="{StaticResource TreeViewItemContainerStyle}">
-                    <EventSetter Event="TreeViewItem.MouseMove" Handler="TreeViewItem_MouseMove" />
-                    <EventSetter Event="TreeViewItem.DragOver" Handler="TreeViewItem_DragOver" />
-                    <EventSetter Event="TreeViewItem.Drop" Handler="TreeViewItem_Drop" />
+                    <Setter Property="ContextMenu" Value="{StaticResource ItemContextMenu}" />
                 </Style>
             </TreeView.ItemContainerStyle>
 
