--- a/src/AnyStatus/Resources/Styles.xaml
+++ b/src/AnyStatus/Resources/Styles.xaml
@@ -30,7 +30,7 @@
         -->
     </Style>
 
-    <Style x:Key="TreeViewItemContainerStyle" TargetType="{x:Type TreeViewItem}">
+    <Style x:Key="TreeViewItemStyle" TargetType="{x:Type TreeViewItem}">
         <Setter Property="Padding" Value="0"/>
         <Setter Property="Margin" Value="0,3,0,0"/>
         <Setter Property="Foreground" Value="{DynamicResource {x:Static vsp:EnvironmentColors.ToolWindowTextBrushKey}}"/>
