--- a/src/AnyStatus/Features/New/NewWindow.xaml
+++ b/src/AnyStatus/Features/New/NewWindow.xaml
@@ -15,7 +15,7 @@
              d:DataContext="{d:DesignInstance Type=local:NewViewModel}">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition MinWidth="150" Width="Auto"></ColumnDefinition>
+            <ColumnDefinition MinWidth="180" Width="Auto"></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
 
@@ -35,7 +35,10 @@
                             <Setter Property="Template">
                                 <Setter.Value>
                                     <ControlTemplate>
-                                        <Expander Padding="3" Header="{Binding Name}" IsExpanded="False">
+                                        <Expander Padding="3" IsExpanded="False">
+                                            <Expander.Header>
+                                                <TextBlock Text="{Binding Name}" FontWeight="Bold" />
+                                            </Expander.Header>
                                             <ItemsPresenter />
                                         </Expander>
                                     </ControlTemplate>
@@ -47,24 +50,14 @@
             </ListBox.GroupStyle>
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <TextBlock Text="{Binding Name}" Padding="3" ToolTip="{Binding Description}"/>
+                    <TextBlock Text="{Binding Name}" Padding="12,3,3,3" ToolTip="{Binding Description}"/>
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
 
+        <!--PropertyGrid-->
         <StackPanel Grid.Column="2" Grid.Row="0" Orientation="Vertical">
-            <!--<TextBlock FontSize="24" Text="{Binding SelectedTemplate.Name}" Margin="4" />
-            <TextBlock Text="{Binding SelectedTemplate.Description}" TextWrapping="Wrap" Margin="5">
-                <TextBlock.Style>
-                    <Style TargetType="TextBlock">
-                        <Style.Triggers>
-                            <Trigger Property="Text" Value="">
-                                <Setter Property="Visibility" Value="Collapsed" />
-                            </Trigger>
-                        </Style.Triggers>
-                    </Style>
-                </TextBlock.Style>
-            </TextBlock>-->
+
             <xctk:PropertyGrid Margin="0,0,11,0"
                            ShowSearchBox="False" 
                            ShowSortOptions="False"
@@ -76,8 +69,10 @@
                            SelectedObject="{Binding SelectedTemplate.Item}"
                            SelectedObjectTypeName="{Binding SelectedTemplate.Name}">
             </xctk:PropertyGrid>
+            
         </StackPanel>
 
+        <!--Buttons-->
         <DockPanel Grid.Column="2" Grid.Row="1">
             <Button DockPanel.Dock="Right" Command="{Binding CancelCommand}" Width="70" Margin="5">Cancel</Button>
             <Button DockPanel.Dock="Right" Command="{Binding AddCommand}" CommandParameter="{Binding SelectedTemplate.Item}" Width="70" Margin="5">Add</Button>
@@ -86,5 +81,6 @@
                 <TextBlock Text="{Binding Message}" VerticalAlignment="Center" Margin="5" />
             </StackPanel>
         </DockPanel>
+        
     </Grid>
 </vsp:DialogWindow>
