--- a/src/AnyStatus/Features/ToolWindow/ToolWindowControl.xaml
+++ b/src/AnyStatus/Features/ToolWindow/ToolWindowControl.xaml
@@ -40,6 +40,7 @@
         <TreeView Name="TreeView"
                   ItemsSource="{Binding Settings.RootItem.Items}"
                   ContextMenu="{StaticResource TreeViewContextMenu}"
+                  VirtualizingPanel.IsVirtualizing="True"
                   Background="Transparent" 
                   BorderThickness="0" 
                   FocusVisualStyle="{x:Null}"
